--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_chat" />
+        android:id="@+id/navigation_Message"
+        android:icon="@drawable/nav_message"
+        android:title="@string/message" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_message" />
+        android:id="@+id/navigation_Support"
+        android:icon="@drawable/nav_support"
+        android:title="@string/support" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_profile" />
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/nav_profile"
+        android:title="@string/profile" />
 
 </menu>
