--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient1"
     tools:context=".MainActivity">
 
-
-    <LinearLayout
+    <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/gradient1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="230dp"
+        app:srcCompat="@drawable/ic_default_monochrome_black"
+        tools:srcCompat="@drawable/ic_default_monochrome_black" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="379dp"
-            android:layout_height="144dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="230dp"
-            app:srcCompat="@drawable/ic_default_monochrome_black"
-            tools:srcCompat="@drawable/ic_default_monochrome_black" />
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/imageView2"
+        android:layout_marginBottom="-34dp"
+        android:gravity="center_horizontal"
+        android:text="Support"
+        android:textColor="#000000"
+        android:textSize="22sp" />
+
+    <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal"
+            android:text="Version 1.0.0"
+            android:textSize="18sp" />
+
+</RelativeLayout>
