--- a/app/src/main/res/layout/fragment_support.xml
+++ b/app/src/main/res/layout/fragment_support.xml
@@ -16,8 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="UnResoved"
-            android:textColor="#ffffff"
-            android:background="#ff0000"
+            android:textColor="@color/colorPrimary"
+            android:background="@drawable/gradient1"
             android:textSize="22sp"
             android:textStyle="bold"
             android:gravity="center_horizontal"></TextView>
@@ -40,8 +40,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Resoved"
-            android:textColor="#ffffff"
-            android:background="@color/colorPrimary"
+            android:textColor="@color/colorPrimary"
+            android:background="@drawable/gradient1"
             android:textSize="22sp"
             android:textStyle="bold"
             android:gravity="center_horizontal"></TextView>
